@@ -1,3 +1,6 @@
+24/11/11 Julien Dutheil
+* Added SequenceWalker class and test.
+
 21/11/11 Julien Dutheil
 * Added support for GFF3.
 
